# tron-gpn-bot

./: pyproject.toml
tron_bot_gpn21/: bot.py  test_server.py
