[tool.poetry]
name = "tron-bot-gpn21"
version = "0.1.0"
description = "plays tron"
authors = ["hagi <mail@hagenest.dev>"]
readme = "README.md"
packages = [{include = "tron_bot_gpn21"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
